--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,16 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
+            <a href="{{ site.baseurl }}/">Adventures</a>
+            <!--   dropdown contents:
+            * Hadrian's Wall Path?
+            * John Muir Trail
+            * UBES (general)
+            * Lofoten
+            * Georgia
+            * TCT 2019
+            -->
+            <a href="{{ site.baseurl }}/tech">Tech</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
