--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,19 +27,28 @@
           </div>
 
           <nav>
-            {% for nav in site.data.nav %}
+            <ul>
+              {% for nav in site.data.nav %}
                 {% if nav.subcategories != null %}
+                  <li>
                     <a href="{{ site.url }}{{ nav.url }}">{{ nav.title }} ▼</a>
-                    {% for subcategory in nav.subcategories %}
-                    <a href="{{ site.url }}{{ subcategory.subhref }}">{{ subcategory.subtitle }}</a>
-                    {% endfor %}
+                    <ul>
+                      {% for subcategory in nav.subcategories %}
+                        <li><a href="{{ site.url }}{{ subcategory.subhref }}">{{ subcategory.subtitle }}</a></li>
+                      {% endfor %}
+                    </ul>
+                  </li>
                 {% elsif nav.title == page.title %}
-                     <a href="{{ nav.url }}">{{ nav.title }}</a>
+                  <li class="active">
+                    <a href="{{ nav.url }}">{{ nav.title }}</a>
+                  </li>
                 {% else %}
+                  <li>
                     <a href="{{ site.url }}{{ nav.href }}">{{ nav.title }}</a>
+                  </li>
                 {% endif %}
-              {% endfor %}
-          </nav>
+            {% endfor %}
+          </ul>
         </header>
       </div>
     </div>
