--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,28 +27,22 @@
           </div>
 
           <nav>
-            <ul>
-              {% for nav in site.data.nav %}
-                {% if nav.subcategories != null %}
-                  <li>
-                    <a href="{{ site.url }}{{ nav.url }}">{{ nav.title }} ▼</a>
-                    <ul>
-                      {% for subcategory in nav.subcategories %}
-                        <li><a href="{{ site.url }}{{ subcategory.subhref }}">{{ subcategory.subtitle }}</a></li>
-                      {% endfor %}
-                    </ul>
-                  </li>
-                {% elsif nav.title == page.title %}
-                  <li class="active">
-                    <a href="{{ nav.url }}">{{ nav.title }}</a>
-                  </li>
-                {% else %}
-                  <li>
-                    <a href="{{ site.url }}{{ nav.href }}">{{ nav.title }}</a>
-                  </li>
-                {% endif %}
-            {% endfor %}
-          </ul>
+            <a href="/about">About</a>
+            <a href="/">Blog</a>
+            <div class="dropdown">
+              <button class="dropdown-btn">Adventures<i class="fa fa-caret-down"></i></button>
+              <div class="dropdown-content">
+                <a href="/adventures">All Posts</a>
+                <a href="#">Hadrian's Wall Path</a>
+                <a href="#">John Muir Trail</a>
+                <a href="#">UBES</a>
+                <a href="#">Lofoten</a>
+                <a href="#">Transcausian Trail</a>
+              </div>
+            </div>
+            <a href="/tech">Tech</a>
+          </nav>
+
         </header>
       </div>
     </div>
