--- a/style.scss
+++ b/style.scss
@@ -267,6 +267,7 @@ nav {
  text-decoration: none;
  display: block;
  text-align: left;
+ margin-left: 5px;
 }
 
 /* Add a grey background color to dropdown links on hover */
