updated about and header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,19 +28,17 @@
 
           <nav>
             <a href="/about">About</a>
-            <a href="/">Blog</a>
+            <a href="/blog">Blog</a>
+            <a href="/research">Research</a>
             <div class="dropdown">
-              <button class="dropdown-btn">Adventures<i class="fa fa-caret-down"></i></button>
+              <button class="dropdown-btn"><a href="/adventures">Adventures</a><i class="fa fa-caret-down"></i></button>
               <div class="dropdown-content">
-                <a href="/adventures">All Posts</a>
                 <a href="#">Hadrian's Wall Path</a>
                 <a href="#">John Muir Trail</a>
-                <a href="#">UBES</a>
                 <a href="#">Lofoten</a>
-                <a href="#">Transcausian Trail</a>
+                <a href="#">Transcaucasian Trail</a>
               </div>
             </div>
-            <a href="/tech">Tech</a>
           </nav>
 
         </header>
