updated adventures page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,15 +30,7 @@
             <a href="/about">About</a>
             <a href="/blog">Blog</a>
             <a href="/research">Research</a>
-            <div class="dropdown">
-              <button class="dropdown-btn"><a href="/adventures">Adventures</a><i class="fa fa-caret-down"></i></button>
-              <div class="dropdown-content">
-                <a href="#">Hadrian's Wall Path</a>
-                <a href="#">John Muir Trail</a>
-                <a href="#">Lofoten</a>
-                <a href="#">Transcaucasian Trail</a>
-              </div>
-            </div>
+            <a href="/adventures">Adventures</a>
           </nav>
 
         </header>
