--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -1,10 +1,101 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
 
-<link rel="stylesheet" href="../_includes/timeliner.css" type="text/css" media="screen">
-<script type="text/javascript" src="../includes/jquery-3.4.1.min.js"></script>
-<script type="text/javascript" src="../includes/timeliner.js"></script>
+    {% include meta.html %}
+    {% include slider_styles.html %}
+
+    <!--[if lt IE 9]>
+      <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
+    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+    <link rel="stylesheet" href="../_includes/timeliner.css" type="text/css" media="screen">
+    <script type="text/javascript" src="../includes/jquery-3.4.1.min.js"></script>
+    <script type="text/javascript" src="../includes/timeliner.js"></script>
+
+    <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
+  </head>
+
+  <body>
+    <div class="wrapper-masthead">
+      <div class="container">
+        <header class="masthead clearfix">
+          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
+
+          <div class="site-info">
+            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+            <p class="site-description">{{ site.description }}</p>
+          </div>
+
+          <nav>
+            <a href="/about">About</a>
+            <a href="/blog">Blog</a>
+            <a href="/adventures">Adventures</a>
+          </nav>
+
+        </header>
+      </div>
+    </div>
+
+    <script>
+        $(document).ready(function() {
+                $.timeliner({});
+        });
+    </script>
+
+    <div id="main" role="main" class="container">
+      {{ content }}
+    </div>
+
+   <div id="timeline" class="timeline-container">
+        <div class="timeline-wrapper">
+                <h2 class="timeline-time">1976</h2>
+
+                <dl class="timeline-series">
+
+                        <dt class="timeline-event" id="event01"><a>Event</a></dt>
+                        <dd class="timeline-event-content" id="event01EX">
+                                <p>Content about the event goes here.</p>
+                        </dd>
+
+                        <dt class="timeline-event" id="event02"><a>Another Event</a></dt>
+                        <dd class="timeline-event-content" id="event02EX">
+                                <p>Content about the other event.</p>
+                        </dd>
+
+                </dl>
+        </div>
+        <div class="timeline-wrapper">
+                <h2 class="timeline-time">1984</h2>
+
+                <dl class="timeline-series">
+
+                        <dt class="timeline-event" id="event03"><a>Yet Another Event</a></dt>
+                        <dd class="timeline-event-content" id="event03EX">
+                                <p>Content about the event goes here.</p>
+                        </dd>
+
+                </dl>
+        </div>
+    <br class="clear">
+</div>
+
+
+    <div class="wrapper-footer">
+      <div class="container">
+        <footer class="footer">
+          {% include svg-icons.html %}
+        </footer>
+      </div>
+    </div>
+
+    {% include analytics.html %}
+    {% include slider_scripts.html %}
+  </body>
+</html>
 
 <script>
         $(document).ready(function() {
