--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,3 +10,9 @@ layout: default
     {{ content }}
   </div>
 </article>
+
+{% for js in page.jsarr %}
+  <script type="text/javascript">
+    {% include {{ js }} %}
+  </script>
+{% endfor %}
