--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -32,7 +32,7 @@
 
           <nav>
             <a href="/about">About</a>
-            <a href="/blog">Blog</a>
+            <!-- <a href="/blog">Blog</a> -->
             <a href="/adventures">Adventures</a>
           </nav>
 
