--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 
           <nav>
             <a href="/about">About</a>
-            <a href="/blog">Blog</a>
+            <!-- <a href="/blog">Blog</a> -->
             <a href="/adventures">Adventures</a>
           </nav>
 
