--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
             <a href="/about">About</a>
             <!-- <a href="/blog">Blog</a> -->
             <a href="/adventures">Adventures</a>
+            <a href="/bookshelf">Bookshelf</a>
           </nav>
 
         </header>
