--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,8 +29,8 @@
 
           <nav>
             <a href="/about">About</a>
-            <!-- <a href="/blog">Blog</a> -->
             <a href="/adventures">Adventures</a>
+            <a href="/blog">Blog</a>
             <a href="/bookshelf">Bookshelf</a>
           </nav>
 
